--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap);/*!
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap);@import url(https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap);/*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
